[fix] color gray -> secondary

--- a/stories/DataDisplay/ChipGroup.stories.mdx
+++ b/stories/DataDisplay/ChipGroup.stories.mdx
@@ -52,9 +52,9 @@ export const Basic = (args, { argTypes }) => ({
             template: `
                 <div>
                  <ChipGroup size="small">
-                    <Chip type="fill" color="gray" size="small">Chip</Chip>
-                    <Chip type="outlined" color="gray" size="small">Chip</Chip>
-                    <Chip type="fill" color="gray" size="small">Chip</Chip>
+                    <Chip type="fill" color="secondary" size="small">Chip</Chip>
+                    <Chip type="outlined" color="secondary" size="small">Chip</Chip>
+                    <Chip type="fill" color="secondary" size="small">Chip</Chip>
                  </ChipGroup>
                  <hr/>
                  <ChipGroup size="medium">
