--- a/stories/Message/Modal/WithFormModal.stories.mdx
+++ b/stories/Message/Modal/WithFormModal.stories.mdx
@@ -166,7 +166,7 @@ export const Default = (args, { argTypes }) => ({
                                         placeholder="쿠폰코드를 입력하세요"
                                     />
                                 </span>
-                                <Button type="outlined" color="gray" @click="handleSubmitModal">등록하기</Button>
+                                <Button type="outlined" color="secondary" @click="handleSubmitModal">등록하기</Button>
                             </InputGroup>
                         </template>
                     </WithFormModal>
