--- a/stories/DataEntry/Dropdown.stories.mdx
+++ b/stories/DataEntry/Dropdown.stories.mdx
@@ -4,7 +4,7 @@ import List from "@/src/Components/DataDisplay/List";
 import ListItem from "@/src/Components/DataDisplay/ListItem";
 import Divider from "@/src/Elements/Utility/Divider";
 import SearchInput from "@/src/Components/DataEntry/SearchInput";
-import Input from "@/src/Components/DataEntry/Input";
+import TextField from "@/src/Components/DataEntry/TextField";
 import Typography from "@/src/Elements/Core/Typography/Typography";
 import Label from '@/src/Components/DataDisplay/Label';
 import clickOutside from "@/directives/click-outside";
@@ -129,9 +129,10 @@ export const Default = (args, { argTypes }) => ({
                     </div>
                     <Dropdown max-width="230px" label="Input Dropdown">
                         <template v-slot:item>
-                            <Input
+                            <TextField
                                 v-click-outside="closeList"
                                 :value.sync="inputValue"
+                                outlined
                                 full
                                 @click="showInputDropdown = !showInputDropdown"
                                 style="width: 230px"
@@ -150,7 +151,7 @@ export const Default = (args, { argTypes }) => ({
                     </Dropdown>
                 </div>
             `,
-            components: { Dropdown, SearchInput, List, ListItem, Divider, Input, Label },
+            components: { Dropdown, SearchInput, List, ListItem, Divider, TextField, Label },
             directives: {
                 clickOutside,
             },
