--- a/stories/DataEntry/Form.stories.mdx
+++ b/stories/DataEntry/Form.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
 import Form from "@/src/Components/DataEntry/Form";
-import Input from "@/src/Components/DataEntry/Input";
+import TextField from "@/src/Components/DataEntry/TextField";
 import TextArea from "@/src/Components/DataEntry/TextArea";
 
 <Meta
@@ -16,12 +16,12 @@ import TextArea from "@/src/Components/DataEntry/TextArea";
         template: `
             <div style="width:300px">
                 <Form>
-                    <Input placeholder="사이 사이 간격 12px"/>
+                    <TextField outlined placeholder="사이 사이 간격 12px"/>
                     <TextArea/>
                 </Form>
             </div>
     `,
-        components: { Form, Input, TextArea },
+        components: { Form, TextField, TextArea },
     }}
     </Story>
 </Canvas>
