--- a/stories/Message/Modal/WithFormModal.stories.mdx
+++ b/stories/Message/Modal/WithFormModal.stories.mdx
@@ -1,6 +1,6 @@
 import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
 import WithFormModal, { aligns } from "@/src/Components/Message/Modal/WithFormModal";
-import Input from "@/src/Components/DataEntry/Input";
+import TextField from "@/src/Components/DataEntry/TextField";
 import Button from "@/src/Components/Button/Button";
 import Typography from "@/src/Elements/Core/Typography/Typography";
 import InputGroup from "@/src/Components/DataEntry/InputGroup";
@@ -85,7 +85,7 @@ import Select from "@/src/Components/DataEntry/Select";
 
 export const Default = (args, { argTypes }) => ({
     props: Object.keys(argTypes),
-    components: { WithFormModal, Input, Button, Typography },
+    components: { WithFormModal, TextField, Button, Typography },
     template: `
         <div>
             <Button @click="show = true">Open</Button>
@@ -106,7 +106,7 @@ export const Default = (args, { argTypes }) => ({
                 </template>
                 <template v-slot:content>
                   <Typography type="body2" color="gray700" class="mb-12">title 아래 여백이 20px로 증가한다.</Typography>
-                  <Input full />
+                  <TextField full />
                 </template>
             </WithFormModal>
         </div>`
@@ -151,29 +151,28 @@ export const Default = (args, { argTypes }) => ({
                         <template v-slot:content>
                             <InputGroup class="mb-12">
                                 <span style="width: 100%" class="mr-4">
-                                    <Input
-                                        type="underlined"
+                                    <TextField
                                         placeholder="쿠폰코드를 입력하세요"
                                         full
                                     />
                                 </span>
-                                <Button type="outlined" @click="handleSubmitModal">등록하기</Button>
+                                <Button type="outlined" color="primary" @click="handleSubmitModal">등록하기</Button>
                             </InputGroup>
                             <InputGroup>
                                 <span class="mr-4">
-                                    <Input
+                                    <TextField
                                         full
                                         placeholder="쿠폰코드를 입력하세요"
                                     />
                                 </span>
-                                <Button type="outlined" color="gray" @click="handleSubmitModal">등록하기</Button>
+                                <Button type="outlined" color="secondary" @click="handleSubmitModal">등록하기</Button>
                             </InputGroup>
                         </template>
                     </WithFormModal>
                 </div>
             `,
             components: {
-                WithFormModal, Input, Button, InputGroup
+                WithFormModal, TextField, Button, InputGroup
             }
         }}
     </Story>
@@ -209,7 +208,7 @@ export const Default = (args, { argTypes }) => ({
                             <Typography type="body2" color="gray700" align="center" class="mb-8">
                                 아래 항목 중 선택하세요.
                             </Typography>
-                            <Select v-model="value" :options="['Option1', 'Option2', 'Option3', 'Option4', 'Option5']"></Select>
+                            <Select v-model="value" full :options="['Option1', 'Option2', 'Option3', 'Option4', 'Option5']"></Select>
                         </template>
                     </WithFormModal>
                 </div>
@@ -262,14 +261,14 @@ export const Default = (args, { argTypes }) => ({
                                 제출을 원한다면 아래 문구를 작성하세요.
                             </Typography>
                             <div style="display: flex; flex-direction: row; align-items: center; justify-content: space-between">
-                                <Input :value.sync="checkValue" full placeholder="제출합니다" align="center" class="mr-4" />
+                                <TextField :value.sync="checkValue" full outlined placeholder="제출합니다" align="center" class="mr-4" />
                             </div>
                         </template>
                     </WithFormModal>
                 </div>
             `,
             components: {
-                WithFormModal, Input, Button, Typography
+                WithFormModal, TextField, Button, Typography
             }
         }}
     </Story>
