[add] story에 빠진 props 추가

--- a/stories/DataEntry/Textfield.stories.mdx
+++ b/stories/DataEntry/Textfield.stories.mdx
@@ -87,16 +87,16 @@ export const Default = (args, { argTypes }) => ({
         `<TextField
             :id="id"
             :type="type"
-            outlined
+            :outlined="outlined"
             :placeholder="placeholder"
             :label="label"
             :align="align"
             :focus="focus"
             :readonly="readonly"
             :disabled="disabled"
-            :outlined="outlined"
             :value.sync="value"
             :error="error"
+            :error-message="errorMessage"
             :error-color="errorColor"
         />`,
 });
