[change] textField props name 변경

--- a/stories/DataEntry/Textfield.stories.mdx
+++ b/stories/DataEntry/Textfield.stories.mdx
@@ -49,19 +49,14 @@ import TextField, { textFieldTypes, textFieldAligns, textFieldErrorColor } from 
             defaultValue: false,
             control: { type: "boolean" },
         },
-        hint: {
-            description: "텍스트필드 hint 활성화",
-            defaultValue: false,
-            control: { type: "boolean" },
-        },
-        hintColor: {
+        color: {
             description: "hint color",
             control: {
             type: "select",
             options: textFieldErrorColor,
            },
         },
-        hintMessage:{
+        hint:{
             description: "텍스트필드 에러메시지",
             defaultValue: '',
             control: { type: "text" },
@@ -90,8 +85,7 @@ export const Default = (args, { argTypes }) => ({
             :disabled="disabled"
             :value.sync="value"
             :hint="hint"
-            :hint-message="hintMessage"
-            :hint-color="hintColor"
+            :color="color"
         />`,
 });
 
@@ -115,16 +109,14 @@ export const Default = (args, { argTypes }) => ({
                 <div style="width:300px">
                     <TextField
                         type="text"
-                        hint
-                        hint-message="내용을 입력해주세요."
+                        hint="내용을 입력해주세요."
                         :outlined="false"
-                        placeholder="underlined + hint + hint msg"
+                        placeholder="underlined + hint "
                         class="mb-20"
                     />
                     <TextField
                         type="text"
-                        hint
-                        hint-message="내용을 입력해주세요."
+                        hint="내용을 입력해주세요."
                         :outlined="false"
                         label="label"
                         placeholder="underlined + hint + label"
@@ -132,16 +124,14 @@ export const Default = (args, { argTypes }) => ({
                     />
                     <TextField
                         type="text"
-                        hint
-                        hint-message="내용을 입력해주세요."
+                        hint="내용을 입력해주세요."
                         outlined
-                        placeholder="outlined + hint + hint msg"
+                        placeholder="outlined + hint "
                         class="mb-20"
                     />
                     <TextField
                         type="text"
-                        hint
-                        hint-message="내용을 입력해주세요."
+                        hint="내용을 입력해주세요."
                         outlined
                         label="label"
                         placeholder="outlined + hint + label"
@@ -163,18 +153,16 @@ export const Default = (args, { argTypes }) => ({
                 <div style="width:300px">
                     <TextField
                         type="text"
-                        hint
-                        hint-color="secondary"
-                        hint-message="내용을 입력해주세요."
+                        color="secondary"
+                        hint="내용을 입력해주세요."
                         :outlined="false"
-                        placeholder="underlined + hint + hint msg"
+                        placeholder="underlined + hint "
                         class="mb-20"
                     />
                     <TextField
                         type="text"
-                        hint
-                        hint-color="secondary"
-                        hint-message="내용을 입력해주세요."
+                        color="secondary"
+                        hint="내용을 입력해주세요."
                         :outlined="false"
                         label="label"
                         placeholder="underlined + hint + label"
@@ -182,18 +170,16 @@ export const Default = (args, { argTypes }) => ({
                     />
                     <TextField
                         type="text"
-                        hint
-                        hint-message="내용을 입력해주세요."
-                        hint-color="secondary"
+                        hint="내용을 입력해주세요."
+                        color="secondary"
                         outlined
-                        placeholder="outlined + hint + hint msg"
+                        placeholder="outlined + hint"
                         class="mb-20"
                     />
                     <TextField
                         type="text"
-                        hint
-                        hint-message="내용을 입력해주세요."
-                        hint-color="secondary"
+                        hint="내용을 입력해주세요."
+                        color="secondary"
                         outlined
                         label="label"
                         placeholder="outlined + hint + label"
@@ -215,18 +201,16 @@ export const Default = (args, { argTypes }) => ({
                 <div style="width:300px">
                     <TextField
                         type="text"
-                        hint
-                        hint-color="success"
-                        hint-message="내용을 입력해주세요."
+                        color="success"
+                        hint="내용을 입력해주세요."
                         :outlined="false"
-                        placeholder="underlined + hint + hint msg"
+                        placeholder="underlined + hint"
                         class="mb-20"
                     />
                     <TextField
                         type="text"
-                        hint
-                        hint-color="success"
-                        hint-message="내용을 입력해주세요."
+                        color="success"
+                        hint="내용을 입력해주세요."
                         :outlined="false"
                         label="label"
                         placeholder="underlined + hint + label"
@@ -234,18 +218,16 @@ export const Default = (args, { argTypes }) => ({
                     />
                     <TextField
                         type="text"
-                        hint
-                        hint-message="내용을 입력해주세요."
-                        hint-color="success"
+                        hint="내용을 입력해주세요."
+                        color="success"
                         outlined
                         placeholder="outlined + hint + hint msg"
                         class="mb-20"
                     />
                     <TextField
                         type="text"
-                        hint
-                        hint-message="내용을 입력해주세요."
-                        hint-color="success"
+                        hint="내용을 입력해주세요."
+                        color="success"
                         outlined
                         label="label"
                         placeholder="outlined + hint + label"
@@ -267,18 +249,16 @@ export const Default = (args, { argTypes }) => ({
                 <div style="width:300px">
                     <TextField
                         type="text"
-                        hint
-                        hint-color="primary"
-                        hint-message="내용을 입력해주세요."
+                        color="primary"
+                        hint="내용을 입력해주세요."
                         :outlined="false"
-                        placeholder="underlined + hint + hint msg"
+                        placeholder="underlined + hint "
                         class="mb-20"
                     />
                     <TextField
                         type="text"
-                        hint
-                        hint-color="primary"
-                        hint-message="내용을 입력해주세요."
+                        color="primary"
+                        hint="내용을 입력해주세요."
                         :outlined="false"
                         label="label"
                         placeholder="underlined + hint + label"
@@ -286,18 +266,16 @@ export const Default = (args, { argTypes }) => ({
                     />
                     <TextField
                         type="text"
-                        hint
-                        hint-message="내용을 입력해주세요."
-                        hint-color="primary"
+                        hint="내용을 입력해주세요."
+                        color="primary"
                         outlined
                         placeholder="outlined + hint + hint msg"
                         class="mb-20"
                     />
                     <TextField
                         type="text"
-                        hint
-                        hint-message="내용을 입력해주세요."
-                        hint-color="primary"
+                        hint="내용을 입력해주세요."
+                        color="primary"
                         outlined
                         label="label"
                         placeholder="outlined + hint + label"
