hint msg text 제거

--- a/stories/DataEntry/Textfield.stories.mdx
+++ b/stories/DataEntry/Textfield.stories.mdx
@@ -221,7 +221,7 @@ export const Default = (args, { argTypes }) => ({
                         hint="내용을 입력해주세요."
                         color="success"
                         outlined
-                        placeholder="outlined + hint + hint msg"
+                        placeholder="outlined + hint"
                         class="mb-20"
                     />
                     <TextField
@@ -269,7 +269,7 @@ export const Default = (args, { argTypes }) => ({
                         hint="내용을 입력해주세요."
                         color="primary"
                         outlined
-                        placeholder="outlined + hint + hint msg"
+                        placeholder="outlined + hint"
                         class="mb-20"
                     />
                     <TextField
